--- a/src/vspostman/packages.config
+++ b/src/vspostman/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LazyCache" version="2.0.0-beta03" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25408" targetFramework="net46" />
@@ -20,4 +26,5 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.7.104" targetFramework="net46" developmentDependency="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net471" />
 </packages>
