--- a/src/vspostman/packages.config
+++ b/src/vspostman/packages.config
@@ -26,5 +26,6 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.7.104" targetFramework="net46" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net471" />
 </packages>
