Added Response Header

--- a/src/vspostman/vspostman.csproj
+++ b/src/vspostman/vspostman.csproj
@@ -57,8 +57,12 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controls\IResponse.cs" />
     <Compile Include="Controls\ResponseBody.xaml.cs">
       <DependentUpon>ResponseBody.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ResponseHeader.xaml.cs">
+      <DependentUpon>ResponseHeader.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialog\ApiTestWindow.xaml.cs">
       <DependentUpon>ApiTestWindow.xaml</DependentUpon>
@@ -229,6 +233,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\ResponseBody.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ResponseHeader.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
