--- a/src/vspostman/packages.config
+++ b/src/vspostman/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="3.2.2" targetFramework="net471" developmentDependency="true" />
   <package id="LazyCache" version="2.0.0-beta03" targetFramework="net471" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.0.0" targetFramework="net471" />
@@ -27,5 +28,6 @@
   <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net46" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.7.104" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="PropertyChanged.Fody" version="2.5.10" targetFramework="net471" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net471" />
 </packages>
