Replaced Multiple TextBlock with TextBlock&Run

--- a/src/vspostman/vspostman.csproj
+++ b/src/vspostman/vspostman.csproj
@@ -69,7 +69,7 @@
     </Compile>
     <Compile Include="Controls\Response\ResponseType.cs" />
     <Compile Include="Convertor\ResponseToVisibilityConvertor.cs" />
-    <Compile Include="Convertor\IsStatusValidConvertor.cs" />
+    <Compile Include="Convertor\ResponseToBooleanConvertor.cs" />
     <Compile Include="Dto\UrlParamDto.cs" />
     <Compile Include="PropertyChangeBase.cs" />
     <Compile Include="Controls\Response\ResponseBase.cs" />
