Started Implementing RestSharp based ClientService

--- a/src/vspostman/packages.config
+++ b/src/vspostman/packages.config
@@ -29,5 +29,6 @@
   <package id="Microsoft.VSSDK.BuildTools" version="15.7.104" targetFramework="net46" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="PropertyChanged.Fody" version="2.5.10" targetFramework="net471" developmentDependency="true" />
+  <package id="RestSharp" version="106.5.4" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net471" />
 </packages>
