--- a/src/vspostman/vspostman.csproj
+++ b/src/vspostman/vspostman.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Convertor\ResponseToVisibilityConvertor.cs" />
     <Compile Include="Convertor\ResponseToBooleanConvertor.cs" />
     <Compile Include="Dto\UrlParamDto.cs" />
+    <Compile Include="HttpRequest\ClientServiceUsingRestSharp.cs" />
     <Compile Include="PropertyChangeBase.cs" />
     <Compile Include="Controls\Response\ResponseBase.cs" />
     <Compile Include="Controls\Response\ResponseHeader.xaml.cs">
@@ -223,6 +224,9 @@
     <Reference Include="PropertyChanged, Version=2.5.10.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\PropertyChanged.Fody.2.5.10\lib\net452\PropertyChanged.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.5.4.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.5.4\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="stdole, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
@@ -235,6 +239,7 @@
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.4.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
