--- a/src/vspostman.unittest/packages.config
+++ b/src/vspostman.unittest/packages.config
@@ -4,6 +4,7 @@
   <package id="Moq" version="4.9.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net471" />
+  <package id="RestSharp" version="106.5.4" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
